tests/fail/no_dataclass_import.py
# it is necessary to import the module dataclasses.dataclass to use it
@dataclass
class Point:
    x: float
    y: float
